# ihfc-vocabularies

./: .gitignore  README.md  pyproject.toml  tasks.py
data/: conductivity-location.ttl  conductivity-method.ttl  conductivity-pt-conditions.ttl  conductivity-pt-function.ttl  conductivity-saturation.ttl  conductivity-source.ttl  conductivity-strategy.ttl  correction-flags.ttl  exploration-method.ttl  exploration-purpose.ttl  geographic-environment.ttl  heat-flow-method.ttl  probe-type.ttl  temperature-correction.ttl  temperature-method.ttl  transfer-mechanism.ttl
src/: vocabularies.py
