[tool.poetry]
name = "heat-flow-vocabularies"
version = "2024.1"
description = "A collection of SKOS-based vocabularies relevant to the study of Earth's heat flow."
authors = ["Sam <samuel.scott.jennings@gmail.com>"]
license = "CC-BY-4.0"
readme = "README.md"
packages = [{include = "heat_flow_vocabularies"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = {extras = ["excel"], version = "^2.2.3"}
rdflib = "^7.1.1"
babel = "^2.16.0"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
